test_regress/t/t_timing_fork_unsup.out
%Error-TASKNSVAR: t/t_timing_fork_unsup.v:12:12: Invalid capture: Process might outlive this variable. Initialize a local copy instead.
                                               : ... In instance t
   12 |         #6 x = 4;
      |            ^
                  ... For error description see https://verilator.org/warn/TASKNSVAR?v=latest
%Error-TASKNSVAR: t/t_timing_fork_unsup.v:13:12: Invalid capture: Process might outlive this variable. Initialize a local copy instead.
                                               : ... In instance t
   13 |         #2 x++;
      |            ^
%Error-TASKNSVAR: t/t_timing_fork_unsup.v:14:9: Invalid capture: Process might outlive this variable. Initialize a local copy instead.
                                              : ... In instance t
   14 |         x = #4 x * 3;
      |         ^
%Error: Exiting due to
